--- a/index.html
+++ b/index.html
@@ -10,15 +10,83 @@
 <body class="body">
     <div class="page">
         <header class="header">
-            <img class="header__logo" src="./images/logo.svg" alt="Логотип">
-            <img class="header__line" src="./images/Line.svg" alt="Линия">
+            <img class="header__logo" src="./images/header/logo.svg" alt="Логотип">
+            <img class="header__line" src="./images/header/Line.svg" alt="Линия">
         </header>
         <main>
             <section class="profile">
-                <img class="profile__avatar" src="./images/profile/Avatar.png" alt="Аватар">
-
+                <div class="profile__content-wrapper">
+                    <img class="profile__image" src="./images/profile/Avatar.png" alt="">
+                    <div class="profile__info">
+                        <h2 class="profile__name">
+                            Жак-Ив Кусто
+                            <button class="profile__edit-btn">
+                            </button>
+                        </h2>
+                        <p class="profile__description">
+                            Исследователь океана
+                        </p>
+                    </div>
+                </div>
+                <button class="profile__add-btn">
+                </button>
+            </section>
+            <section class="places">
+                <div class="card">
+                    <img class="card__main-img" src="./images/places/Karachaevsk-1.jpg" alt="">
+                    <h2 class="card__title">
+                        Карачаевск
+                        <button class="card__like-btn">
+                        </button>
+                    </h2>
+                </div>
+                <div class="card">
+                    <img class="card__main-img" src="./images/places/Elbrus-2.png" alt="">
+                    <h2 class="card__title">
+                        Гора Эльбрус
+                        <button class="card__like-btn">
+                        </button>
+                    </h2>
+                </div>
+                <div class="card">
+                    <img class="card__main-img" src="./images/places/Dombai-3.png" alt="">
+                    <h2 class="card__title">
+                        Домбай
+                        <button class="card__like-btn">
+                        </button>
+                    </h2>
+                </div>
+                <div class="card">
+                    <img class="card__main-img" src="./images/places/Elbrus-2.png" alt="">
+                    <h2 class="card__title">
+                        Гора Эльбрус
+                        <button class="card__like-btn">
+                        </button>
+                    </h2>
+                </div>
+                <div class="card">
+                    <img class="card__main-img" src="./images/places/Dombai-3.png" alt="">
+                    <h2 class="card__title">
+                        Домбай
+                        <button class="card__like-btn">
+                        </button>
+                    </h2>
+                </div>
+                <div class="card">
+                    <img class="card__main-img" src="./images/places/Karachaevsk-1.jpg" alt="">
+                    <h2 class="card__title">
+                        Карачаево-Ч...
+                        <button class="card__like-btn">
+                        </button>
+                    </h2>
+                </div>
             </section>
         </main>
+        <footer class="footer">
+            <h2 class="footer__description">
+                © 2020 Mesto Russia
+            </h2>
+        </footer>
     </div>
 </body>
 </html>
