--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         </main>
         <footer class="footer">
             <h2 class="footer__description">
-                © 2020 Mesto Russia
+                &copy;&nbsp;2022  Mesto Russia
             </h2>
         </footer>
     </div>
