feat: сделать лендинг по брифу

--- a/index.html
+++ b/index.html
@@ -28,12 +28,26 @@
                         </p>
                     </div>
                 </div>
+                <div class="popup popup_opened">
+                    <form class="popup__form">
+                        <button class="popup__close">
+                        </button>
+                        <h2 class="popup__title">
+                            Редактировать профиль
+                        </h2>
+                        <input class="popup__name" type="text" placeholder="Жак-Ив Кусто">
+                        <input class="popup__img-link" type="text" placeholder="Исследователь океана">
+                        <button class="popup__submit">
+
+                        </button>
+                    </form>
+                </div>
                 <button class="profile__add-btn">
                 </button>
             </section>
             <section class="places">
                 <div class="card">
-                    <img class="card__main-img" src="./images/places/Karachaevsk-1.jpg" alt="">
+                    <img class="card__main-img" src="./images/places/Karachaevsk-1.jpg" alt=""Карачаевск>
                     <h2 class="card__title">
                         Карачаевск
                         <button class="card__like-btn">
@@ -41,7 +55,7 @@
                     </h2>
                 </div>
                 <div class="card">
-                    <img class="card__main-img" src="./images/places/Elbrus-2.png" alt="">
+                    <img class="card__main-img" src="./images/places/Elbrus-2.png" alt="Гора Эльбрус">
                     <h2 class="card__title">
                         Гора Эльбрус
                         <button class="card__like-btn">
@@ -49,7 +63,7 @@
                     </h2>
                 </div>
                 <div class="card">
-                    <img class="card__main-img" src="./images/places/Dombai-3.png" alt="">
+                    <img class="card__main-img" src="./images/places/Dombai-3.png" alt="Домбаи">
                     <h2 class="card__title">
                         Домбай
                         <button class="card__like-btn">
@@ -57,7 +71,7 @@
                     </h2>
                 </div>
                 <div class="card">
-                    <img class="card__main-img" src="./images/places/Elbrus-2.png" alt="">
+                    <img class="card__main-img" src="./images/places/Elbrus-2.png" alt="Гора Эльбрус">
                     <h2 class="card__title">
                         Гора Эльбрус
                         <button class="card__like-btn">
@@ -65,7 +79,7 @@
                     </h2>
                 </div>
                 <div class="card">
-                    <img class="card__main-img" src="./images/places/Dombai-3.png" alt="">
+                    <img class="card__main-img" src="./images/places/Dombai-3.png" alt="Домбаи">
                     <h2 class="card__title">
                         Домбай
                         <button class="card__like-btn">
@@ -73,7 +87,7 @@
                     </h2>
                 </div>
                 <div class="card">
-                    <img class="card__main-img" src="./images/places/Karachaevsk-1.jpg" alt="">
+                    <img class="card__main-img" src="./images/places/Karachaevsk-1.jpg" alt="Карачаевск">
                     <h2 class="card__title">
                         Карачаево-Ч...
                         <button class="card__like-btn">
