fix: .nojekyll add

--- a/index.html
+++ b/index.html
@@ -15,19 +15,19 @@
         </header>
         <main>
             <section class="profile">
-                <div class="profile__content-wrapper">
+                <nav class="profile__content-wrapper">
                     <img class="profile__image" src="./images/profile/Avatar.png" alt="">
                     <div class="profile__info">
-                        <h2 class="profile__name">
+                        <h1 class="profile__name">
                             Жак-Ив Кусто
                             <button class="profile__edit-btn">
                             </button>
-                        </h2>
+                        </h1>
                         <p class="profile__description">
                             Исследователь океана
                         </p>
                     </div>
-                </div>
+                </nav>
                 <div class="popup popup_opened">
                     <form class="popup__form">
                         <button class="popup__close">
