--- a/index.html
+++ b/index.html
@@ -5,18 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./pages/index.css">
-    <title>Mesto</title>
+    <title>Место</title>
 </head>
 <body class="body">
-    <div class="page">
         <header class="header">
             <img class="header__logo" src="./images/header/logo.svg" alt="Логотип">
-            <img class="header__line" src="./images/header/Line.svg" alt="Линия">
         </header>
         <main>
             <section class="profile">
                 <nav class="profile__content-wrapper">
-                    <img class="profile__image" src="./images/profile/Avatar.png" alt="">
+                    <div class="profile__image" alt=""></div>
                     <div class="profile__info">
                         <h1 class="profile__name">
                             Жак-Ив Кусто
@@ -28,7 +26,7 @@
                         </p>
                     </div>
                 </nav>
-                <div class="popup popup_opened">
+                <div class="popup">
                     <form class="popup__form">
                         <button class="popup__close">
                         </button>
@@ -36,7 +34,7 @@
                             Редактировать профиль
                         </h2>
                         <input class="popup__name" type="text" placeholder="Жак-Ив Кусто">
-                        <input class="popup__img-link" type="text" placeholder="Исследователь океана">
+                        <input class="popup__name" type="text" placeholder="Исследователь океана">
                         <button class="popup__submit">
 
                         </button>
@@ -50,7 +48,7 @@
                     <img class="card__main-img" src="./images/places/Karachaevsk-1.jpg" alt=""Карачаевск>
                     <h2 class="card__title">
                         Карачаевск
-                        <button class="card__like-btn">
+                        <button class="card__like-btn card__like-btn_active">
                         </button>
                     </h2>
                 </div>
@@ -101,6 +99,5 @@
                 &copy;&nbsp;2022  Mesto Russia
             </h2>
         </footer>
-    </div>
 </body>
 </html>
